--- a/images/favicon/manifest.json
+++ b/images/favicon/manifest.json
@@ -1,17 +1,41 @@
 {
- "name": "Max-Kozlov",
+ "name": "Max Kozlov",
  "icons": [
   {
-   "src": "/personal-site/images/favicon/android-chrome-192x192.png",
-   "sizes": "192x192",
+   "src": "/personal-site/android-icon-36x36.png",
+   "sizes": "36x36",
    "type": "image/png",
    "density": "0.75"
   },
   {
-   "src": "/personal-site/images/favicon/android-chrome-512x512.png",
-   "sizes": "512x512",
+   "src": "/personal-site/android-icon-48x48.png",
+   "sizes": "48x48",
    "type": "image/png",
    "density": "1.0"
+  },
+  {
+   "src": "/personal-site/android-icon-72x72.png",
+   "sizes": "72x72",
+   "type": "image/png",
+   "density": "1.5"
+  },
+  {
+   "src": "/personal-site/android-icon-96x96.png",
+   "sizes": "96x96",
+   "type": "image/png",
+   "density": "2.0"
+  },
+  {
+   "src": "/personal-site/android-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image/png",
+   "density": "3.0"
+  },
+  {
+   "src": "/personal-site/android-icon-192x192.png",
+   "sizes": "192x192",
+   "type": "image/png",
+   "density": "4.0"
   }
  ]
 }
